--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,17 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^3.1.10
+  cupertino_icons: ^1.0.4
+  firebase_auth: ^3.3.9
+  firebase_core: ^1.13.1
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  google_sign_in: ^5.2.4
+  intl: ^0.17.0
+  jitsi_meet: ^4.0.0
 
 dev_dependencies:
   flutter_test:
