--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   google_sign_in: ^5.2.4
   intl: ^0.17.0
   jitsi_meet: ^4.0.0
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
